Adding comments to code

--- a/index.html
+++ b/index.html
@@ -1,67 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="mediaQ.css"/>
-</head>
-<body>
-    <nav id = 'desktop-nav'>
-        <div class="logo">Sam Cullen</div>
-        <div>
-            <ul class = "nav-links">
-                <li><a href="#about">About</a></li> <!-- link to about page --> 
-                <li><a href="#experience">experience</a></li> <!-- link to about page --> 
-                <li><a href="#projects">projects</a></li> <!-- link to about page --> 
-                <li><a href="#contact">contact</a></li> <!-- link to about page --> 
-            </ul>
-        </div>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaQ.css" />
+  </head>
+  <body>
+    <nav id="desktop-nav">
+      <div class="logo">Sam Cullen</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <!-- link to about page -->
+          <li><a href="#experience">experience</a></li>
+          <!-- link to about page -->
+          <li><a href="#projects">projects</a></li>
+          <!-- link to about page -->
+          <li><a href="#contact">contact</a></li>
+          <!-- link to about page -->
+        </ul>
+      </div>
     </nav>
     <nav id="hamburger-nav">
-    <div class="logo"> Sam Cullen </div>
-    <div class="hamburger-menu">
-    <div class="hamburger-icon" onclick="toggleMenu()">
-    <span></span>
-    <span></span>
-    <span></span>
+      <div class="logo">Sam Cullen</div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
         <div class="menu-links">
-            <li><a href="#about" onclick="toggleMenu()">About</a></li> <!-- link to about page --> 
-            <li><a href="#experience" onclick="toggleMenu()">experience</a></li> <!-- link to about page --> 
-            <li><a href="#projects" onclick="toggleMenu()">projects</a></li> <!-- link to about page --> 
-            <li><a href="#contact" onclick="toggleMenu()">contact</a></li> <!-- link to about page --> 
-    </div>
-</div>
-</nav>
-<section id="profile">
-    <div class="section_pic">
-        <img src="./assets/profile-pic1.png" alt="Sam Cullen picture"/>
-    </div>
-    <div class="section__text">
-    <p class="section__text__p1"> Hello, I'm</p>
-    <h1 class="title">Sam Cullen</h1>
-    <p class="section__text__p2">Software Dev student at SETU Carlow</p>
-   <div class="btn-container">
-    <button
-     class="btn btn-color-2"
-     onclick="window.open('./assets/SamCullenCV.pdf')">
- Download CV</button>
- <button
- class="btn btn-color-1"
- onclick="location.href='./#contact'">
-Contact info
-</button>
-</div>
-<div id="socials=container">
-    <img src="./assets/github.png" alt ="My Github Profile"
-    class ="icon" onclick="location.href='https://github.com/SamCull'"/>
-    <img src="./assets/linkedin.png" alt ="My Linkedin Profile"
-    class ="icon" onclick="location.href='https://www.linkedin.com/in/sam-cullen-489a46221/'"/>
-</div>
-   </div>
-</section>
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
+          <!-- link to about page -->
+          <li><a href="#experience" onclick="toggleMenu()">experience</a></li>
+          <!-- link to about page -->
+          <li><a href="#projects" onclick="toggleMenu()">projects</a></li>
+          <!-- link to about page -->
+          <li><a href="#contact" onclick="toggleMenu()">contact</a></li>
+          <!-- link to about page -->
+        </div>
+      </div>
+    </nav>
+    <section id="profile">
+      <div class="section_pic">
+        <img src="./assets/profile-pic1.png" alt="Sam Cullen picture" />
+      </div>
+      <div class="section__text">
+        <p class="section__text__p1">Hello, I'm</p>
+        <h1 class="title">Sam Cullen</h1>
+        <p class="section__text__p2">Software Dev student at SETU Carlow</p>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/SamCullenCV.pdf')"
+          >
+            Download CV
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact info
+          </button>
+        </div>
+        <div id="socials=container">
+          <img
+            src="./assets/github.png"
+            alt="My Github Profile"
+            class="icon"
+            onclick="location.href='https://github.com/SamCull'"
+          />
+          <img
+            src="./assets/linkedin.png"
+            alt="My Linkedin Profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/sam-cullen-489a46221/'"
+          />
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
