--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
     <!-- Personal photo & Text -->
     <section id="profile">
-      <div class="section_pic">
+      <div class="section__pic-container">
         <img src="./assets/profile-pic.png" alt="Sam Cullen picture" />
       </div>
       <div class="section__text">
@@ -84,13 +84,14 @@
         </div>
       </div>
     </section>
+    <!-- Second page -->
     <section id="about">
       <p class="section__text__p1">Get to know more</p>
       <h1 class="title">About me</h1>
       <div class="section-container">
         <div class="section_pic-container">
           <img
-            src="./assets/about-pic1.png"
+            src="./assets/about-pic.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -124,12 +125,15 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quia
-              id autem aliquam ex minus cupiditate pariatur voluptate illum
-              eaque! Explicabo sequi dignissimos iusto assumenda a veniam minus
-              iste, quia magnam quaerat repellat maiores eos fuga iure. Fugit,
-              officiis laudantium voluptas earum quam repellat, sapiente magnam
-              accusantium illo, ex quidem?
+              Graduated with B.Sc. Bachelors Degree in Software Development at
+              SETU Carlow and pursuing my honours degree in my final year. Now
+              seeking the opportunity to start working and to learn and gain new
+              skills within a workplace. Since my school years, I’ve had a deep
+              interest in software development and from then I knew that this
+              was where I would build my education and wanted to make a career
+              out of something I’d enjoy. I also enjoy playing and watching
+              sport, I’ve been playing rugby since I was young and played on an
+              international level in Rugby League for 4+ years.
             </p>
           </div>
         </div>
@@ -138,8 +142,118 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./experience'"
+        onclick="location.href='./#experience'"
       />
+    </section>
+    <section id ="experience" >
+      <p class="section__text__p1"> Explore my</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-containers">
+            <h2 class="experience-sub-title"> Frontend Development</h2>
+            <div class="article-container">
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                <div>
+                  <h3>HTML</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+                <article>
+      
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>CSS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>JavaScript</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>Java</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>C++</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>Python</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-containers">
+            <h2 class="experience-sub-title"> Backend Development</h2>
+            <div class="article-container">
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                <div>
+                  <h3>PostgradSQL</h3>
+                  <p>SQL</p>
+                </div>
+              </article>
+                <article>
+      
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>Node</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>Express</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>GitHub</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>Text</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                <div>
+                  <h3>Text</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+      src="./assets/arrow.png"
+      alt="Arrow icon"
+      class="icon arrow"
+      onclick="location.href='./#projects'"
+    />
     </section>
     <script src="script.js"></script>
   </body>
