--- a/index.html
+++ b/index.html
@@ -1,260 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaQ.css" />
-  </head>
-  <body>
-    <nav id="desktop-nav">
-      <div class="logo">Sam Cullen</div>
-      <div>
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <!-- link to about page -->
-          <li><a href="#experience">Experience</a></li>
-          <!-- link to about page -->
-          <li><a href="#projects">Projects</a></li>
-          <!-- link to about page -->
-          <li><a href="#contact">Contact</a></li>
-          <!-- link to about page -->
-        </ul>
-      </div>
-    </nav>
-    <!-- Nav links for hamburger -->
-    <nav id="hamburger-nav">
-      <div class="logo">Sam Cullen</div>
-      <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <div class="menu-links">
-          <li>
-            <!-- link to about page -->
-            <a href="#about" onclick="toggleMenu()">About</a>
-          </li>
-          <!-- link to experience page-->
-          <li><a href="#Experience" onclick="toggleMenu()">Experience</a></li>
-          <!-- link to projects page -->
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <!-- link to contact page-->
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-        </div>
-      </div>
-    </nav>
-    <!-- Personal photo & Text -->
-    <section id="profile">
-      <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Sam Cullen picture" />
-      </div>
-      <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Sam Cullen</h1>
-        <p class="section__text__p2">Software Dev student at SETU Carlow</p>
 
-        <!-- LinkedIn & GitHub buttons-->
-        <div class="btn-container">
-          <button
-            class="btn btn-color-2"
-            onclick="window.open('./assets/SamCullenCV.pdf')"
-          >
-            Download CV
-          </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact info
-          </button>
-        </div>
-        <div id="socials=container">
-          <img
-            src="./assets/github.png"
-            alt="My Github Profile"
-            class="icon"
-            onclick="location.href='https://github.com/SamCull'"
-          />
-          <img
-            src="./assets/linkedin.png"
-            alt="My Linkedin Profile"
-            class="icon"
-            onclick="location.href='https://www.linkedin.com/in/sam-cullen-489a46221/'"
-          />
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="mediaQ.css" />
+</head>
+
+<body>
+  <nav id="desktop-nav">
+    <div class="logo">Sam Cullen</div>
+    <div>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <!-- link to about page -->
+        <li><a href="#experience">Experience</a></li>
+        <!-- link to about page -->
+        <li><a href="#projects">Projects</a></li>
+        <!-- link to about page -->
+        <li><a href="#contact">Contact</a></li>
+        <!-- link to about page -->
+      </ul>
+    </div>
+  </nav>
+  <!-- Nav links for hamburger -->
+  <nav id="hamburger-nav">
+    <div class="logo">Sam Cullen</div>
+    <div class="hamburger-menu">
+      <div class="hamburger-icon" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
-    </section>
-    <!-- Second page -->
-    <section id="about">
-      <p class="section__text__p1">Get to know more</p>
-      <h1 class="title">About me</h1>
-      <div class="section-container">
-        <div class="section_pic-container">
-          <img
-            src="./assets/about-pic.png"
-            alt="Profile picture"
-            class="about-pic"
-          />
-        </div>
-        <div class="about_details_container">
-          <div class="about-containers">
-            <div class="details-containers">
-              <img
-                src="./assets/experience.png"
-                alt="experience-icon"
-                class="icon"
-              />
-              <h3>Experience</h3>
-              <p>
-                2+ Years <br />
-                Frontend Development
-              </p>
-            </div>
-            <div class="details-container">
-              <img
-                src="./assets/education.png"
-                alt="education-icon"
-                class="icon"
-              />
-              <h3>Education</h3>
-              <p>
-                B.Sc. Bachelors Degree <br />
-                M.Sc. Masters Degree
-              </p>
-            </div>
-          </div>
-          <div class="text-container">
+      <div class="menu-links">
+        <li>
+          <!-- link to about page -->
+          <a href="#about" onclick="toggleMenu()">About</a>
+        </li>
+        <!-- link to experience page-->
+        <li><a href="#Experience" onclick="toggleMenu()">Experience</a></li>
+        <!-- link to projects page -->
+        <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+        <!-- link to contact page-->
+        <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+      </div>
+    </div>
+  </nav>
+  <!-- Personal photo & Text -->
+  <section id="profile"><!-- Open here for Profile-->
+    <div class="section__pic-container">
+      <img src="./assets/profile-pic1.png" alt="Sam Cullen picture" />
+    </div>
+    <div class="section__text">
+      <p class="section__text__p1">Hello, I'm</p>
+      <h1 class="title">Sam Cullen</h1>
+      <p class="section__text__p2">Software Dev student at SETU Carlow</p>
+
+      <!-- LinkedIn & GitHub buttons-->
+      <div class="btn-container">
+        <button class="btn btn-color-2" onclick="window.open('./assets/SamCullenCV.pdf')">
+          Download CV
+        </button>
+        <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          Contact info
+        </button>
+      </div>
+      <div id="socials=container">
+        <img src="./assets/github.png" alt="My Github Profile" class="icon"
+          onclick="location.href='https://github.com/SamCull'" />
+        <img src="./assets/linkedin.png" alt="My Linkedin Profile" class="icon"
+          onclick="location.href='https://www.linkedin.com/in/sam-cullen-489a46221/'" />
+      </div>
+    </div>
+  </section>
+  <!-- Second page -->
+  <section id="about"><!-- Open here for About-->
+    <p class="section__text__p1">Get to know more</p>
+    <h1 class="title">About me</h1>
+    <div class="section-container">
+      <div class="section_pic-container">
+        <img src="./assets/about-pic1.png" alt="Profile picture" class="about-pic" />
+      </div>
+      <div class="about_details_container">
+        <div class="about-containers">
+          <div class="details-containers">
+            <img src="./assets/experience.png" alt="experience-icon" class="icon" />
+            <h3>Experience</h3>
             <p>
-              Graduated with B.Sc. Bachelors Degree in Software Development at
-              SETU Carlow and pursuing my honours degree in my final year. Now
-              seeking the opportunity to start working and to learn and gain new
-              skills within a workplace. Since my school years, I’ve had a deep
-              interest in software development and from then I knew that this
-              was where I would build my education and wanted to make a career
-              out of something I’d enjoy. I also enjoy playing and watching
-              sport, I’ve been playing rugby since I was young and played on an
-              international level in Rugby League for 4+ years.
+              2+ Years <br />
+              Frontend Development
+            </p>
+          </div>
+          <div class="details-containers">
+            <img src="./assets/education.png" alt="education-icon" class="icon" />
+            <h3>Education</h3>
+            <p>
+              B.Sc. Bachelors Degree <br />
+              M.Sc. Masters Degree
             </p>
           </div>
         </div>
+        <div class="text-container">
+          <p>
+            Graduated with B.Sc. Bachelors Degree in Software Development at
+            SETU Carlow and pursuing my honours degree in my final year. Now
+            seeking the opportunity to start working and to learn and gain new
+            skills within a workplace. Since my school years, I’ve had a deep
+            interest in software development and from then I knew that this
+            was where I would build my education and wanted to make a career
+            out of something I’d enjoy. I also enjoy playing and watching
+            sport, I’ve been playing rugby since I was young and played on an
+            international level in Rugby League for 4+ years.
+          </p>
+        </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#experience'"
-      />
-    </section>
-    <section id ="experience" >
-      <p class="section__text__p1"> Explore my</p>
-      <h1 class="title">Experience</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-containers">
-            <h2 class="experience-sub-title"> Frontend Development</h2>
-            <div class="article-container">
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-                <article>
-      
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>CSS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>JavaScript</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>Java</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>C++</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>Python</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-            </div>
+    </div>
+    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
+  </section>
+  <section id="experience"> <!-- Open here for Experience -->
+    <!-- Creating tables including Front/Back end skills -->
+    <p class="section__text__p1"> Explore my</p>
+    <h1 class="title">Experience</h1>
+    <div class="experience-details-container">
+      <div class="about-containers">
+        <div class="details-containers">
+          <!-- Frontend info -->
+          <h2 class="experience-sub-title"> Frontend Development</h2>
+          <div class="article-container">
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>HTML</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
+            <article>
+
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>CSS</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>JavaScript</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>Java</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>C++</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>Python</h3>
+                <p>Basic</p>
+              </div>
+            </article>
           </div>
-          <div class="details-containers">
-            <h2 class="experience-sub-title"> Backend Development</h2>
-            <div class="article-container">
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
-                <div>
-                  <h3>PostgradSQL</h3>
-                  <p>SQL</p>
-                </div>
-              </article>
-                <article>
-      
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>Node</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>Express</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>GitHub</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>Text</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
-                <div>
-                  <h3>Text</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-            </div>
+        </div>
+        <div class="details-containers">
+          <!-- Backend info -->
+          <h2 class="experience-sub-title"> Backend Development</h2>
+          <div class="article-container">
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>MySQL</h3>
+                <p>Basic</p>
+              </div>
+            </article>
+            <article>
+
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>PHP</h3>
+                <p>Basic</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>GitHub</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>Sample</h3>
+                <p>Text</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>Sample</h3>
+                <p>Text</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>Sample</h3>
+                <p>Text</p>
+              </div>
+            </article>
           </div>
         </div>
       </div>
-      <img
-      src="./assets/arrow.png"
-      alt="Arrow icon"
-      class="icon arrow"
-      onclick="location.href='./#projects'"
-    />
-    </section>
-    <script src="script.js"></script>
-  </body>
+    </div>
+    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+  </section>
+  <script src="script.js"></script>
+</body>
 </html>
