Project & Contact page
Added contact page & finished project page - working on footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a href="#about" onclick="toggleMenu()">About</a>
         </li>
         <!-- link to experience page-->
-        <li><a href="#Experience" onclick="toggleMenu()">Experience</a></li>
+        <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
         <!-- link to projects page -->
         <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
         <!-- link to contact page-->
@@ -51,7 +51,7 @@
   <!-- Personal photo & Text -->
   <section id="profile"><!-- Open here for Profile-->
     <div class="section__pic-container">
-      <img src="./assets/profile-pic1.png" alt="Sam Cullen picture" />
+     <!-- <img src="./assets/profile-pic1.png" alt="Sam Cullen picture" /> -->
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
@@ -81,7 +81,7 @@
     <h1 class="title">About me</h1>
     <div class="section-container">
       <div class="section_pic-container">
-        <img src="./assets/about-pic1.png" alt="Profile picture" class="about-pic" />
+      <!--  <img src="./assets/about-pic1.png" alt="Profile picture" class="about-pic" /> -->
       </div>
       <div class="about_details_container">
         <div class="about-containers">
@@ -89,16 +89,16 @@
             <img src="./assets/experience.png" alt="experience-icon" class="icon" />
             <h3>Experience</h3>
             <p>
-              2+ Years <br />
-              Frontend Development
+              4th Year <br />
+              Software Development Student
             </p>
           </div>
           <div class="details-containers">
             <img src="./assets/education.png" alt="education-icon" class="icon" />
             <h3>Education</h3>
             <p>
-              B.Sc. Bachelors Degree <br />
-              M.Sc. Masters Degree
+              B.Sc. Ordinary Bachelors Degree <br />
+              B.Sc. Honours Bachelors Degree
             </p>
           </div>
         </div>
@@ -133,7 +133,7 @@
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h3>HTML</h3>
+                <h3>AA</h3>
                 <p>Intermediate</p>
               </div>
             </article>
@@ -141,35 +141,35 @@
 
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>CSS</h3>
+                <h3>BB</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>JavaScript</h3>
+                <h3>CC</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>Java</h3>
+                <h3>DD</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>C++</h3>
+                <h3>GG</h3>
                 <p>Experienced</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>Python</h3>
+                <h3>HH</h3>
                 <p>Basic</p>
               </div>
             </article>
@@ -182,7 +182,7 @@
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h3>MySQL</h3>
+                <h3>JJ</h3>
                 <p>Basic</p>
               </div>
             </article>
@@ -190,36 +190,36 @@
 
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>PHP</h3>
+                <h3>PP</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>GitHub</h3>
+                <h3>TT</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>Sample</h3>
-                <p>Text</p>
+                <h3>RR</h3>
+                <p>Experienced</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>Sample</h3>
-                <p>Text</p>
+                <h3>QQ</h3>
+                <p>Intermediate</p>
               </div>
             </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>Sample</h3>
-                <p>Text</p>
+                <h3>VV</h3>
+                <p>Beginner</p>
               </div>
             </article>
           </div>
@@ -234,53 +234,94 @@
     <h1 class="title">Projects</h1>
     <div class="experience-details-container">
       <div class="about-containers">
-      <!-- Copy and paste this div to add more projects -->
-      <div class="details-container color-container">
-        <div class="article-container">
-          <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+        <!-- Copy and paste this div to add more projects -->
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Project One</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
+              GitHub
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
+              Live demo
+            </button>
+          </div>
         </div>
-        <h2 class="experience-sub-title project-title">Project One</h2>
-        <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
-            GitHub
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
-            Live demo
-          </button>
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Project Two</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
+              GitHub
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
+              Live demo
+            </button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/project-3.png" alt="Project 3" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Project Three</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
+              GitHub
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
+              Live demo
+            </button>
+          </div>
         </div>
       </div>
-      <div class="details-container color-container">
-        <div class="article-container">
-          <img src="./assets/project-2.png" alt="Project 2" class="project-img">
-        </div>
-        <h2 class="experience-sub-title project-title">Project Two</h2>
-        <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
-            GitHub
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
-            Live demo
-          </button>
-        </div>
-      </div>
-      <div class="details-container color-container">
-        <div class="article-container">
-          <img src="./assets/project-3.png" alt="Project 3" class="project-img">
-        </div>
-        <h2 class="experience-sub-title project-title">Project Three</h2>
-        <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
-            GitHub
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
-            Live demo
-          </button>
-        </div>
-      </div>
-    </div>
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
+  <!-- Fifth page -->
+  <section id ="contact">
+    <p class = "section__text__p1"> Get in touch</p>
+    <h1 class = "title">Contact me </h1>
+    <div class ="contact-info-upper-container">
+      <div class = "contact-info-container">
+        <img src="./assets/email.png" 
+        alt = "Email icon" 
+        class = "icon contact-icon email-icon"
+        />
+        <p><a href="mailto:examplemail@gmail.com"> samcull2000@gmail.com</a></p>
+      </div>
+          <div class ="contact-info-container">
+      <div class = "contact-info-container">
+        <img src="./assets/linkedin.png" 
+        alt = "LinkedIn icon" 
+        class = "icon contact-icon"
+        />
+        <p><a href="https://www.linkedin.com/in/sam-cullen-489a46221/"> LinkedIn</a></p>
+      </div>
+    </div>
+    </div>
+
+  </section>
+  <footer>
+    <nav>
+      <div class = "nav-links-container">
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <!-- link to about page -->
+          <li><a href="#experience">Experience</a></li>
+          <!-- link to about page -->
+          <li><a href="#projects">Projects</a></li>
+          <!-- link to about page -->
+          <li><a href="#contact">Contact</a></li>
+          <!-- link to about page -->
+        </ul>
+      </div>
+    </nav>
+  </footer>
   <script src="script.js"></script>
 </body>
+
 </html>
