Media viewing update
Created media queries for viewing portfolio on mobile, tablet, etc

Added footer & made some styling changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <!-- Personal photo & Text -->
   <section id="profile"><!-- Open here for Profile-->
     <div class="section__pic-container">
-     <!-- <img src="./assets/profile-pic1.png" alt="Sam Cullen picture" /> -->
+      <!-- <img src="./assets/profile-pic1.png" alt="Sam Cullen picture" /> -->
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
@@ -81,7 +81,7 @@
     <h1 class="title">About me</h1>
     <div class="section-container">
       <div class="section_pic-container">
-      <!--  <img src="./assets/about-pic1.png" alt="Profile picture" class="about-pic" /> -->
+        <!--  <img src="./assets/about-pic1.png" alt="Profile picture" class="about-pic" /> -->
       </div>
       <div class="about_details_container">
         <div class="about-containers">
@@ -279,35 +279,29 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
   </section>
   <!-- Fifth page -->
-  <section id ="contact">
-    <p class = "section__text__p1"> Get in touch</p>
-    <h1 class = "title">Contact me </h1>
-    <div class ="contact-info-upper-container">
-      <div class = "contact-info-container">
-        <img src="./assets/email.png" 
-        alt = "Email icon" 
-        class = "icon contact-icon email-icon"
-        />
+  <section id="contact">
+    <p class="section__text__p1"> Get in touch</p>
+    <h1 class="title">Contact me </h1>
+    <div class="contact-info-upper-container">
+      <div class="contact-info-container">
+        <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
         <p><a href="mailto:examplemail@gmail.com"> samcull2000@gmail.com</a></p>
       </div>
-          <div class ="contact-info-container">
-      <div class = "contact-info-container">
-        <img src="./assets/linkedin.png" 
-        alt = "LinkedIn icon" 
-        class = "icon contact-icon"
-        />
-        <p><a href="https://www.linkedin.com/in/sam-cullen-489a46221/"> LinkedIn</a></p>
+      <div class="contact-info-container">
+        <div class="contact-info-container">
+          <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
+          <p><a href="https://www.linkedin.com/in/sam-cullen-489a46221/"> LinkedIn</a></p>
+        </div>
       </div>
-    </div>
     </div>
 
   </section>
   <footer>
     <nav>
-      <div class = "nav-links-container">
+      <div class="nav-links-container">
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <!-- link to about page -->
@@ -320,6 +314,7 @@
         </ul>
       </div>
     </nav>
+    <p>Copyright &#169;2023 Sam Cullen, All Rights Reserved</p>
   </footer>
   <script src="script.js"></script>
 </body>
