--- a/index.html
+++ b/index.html
@@ -239,26 +239,26 @@
           <div class="article-container">
             <img src="./assets/project-1.png" alt="Project 1" class="project-img">
           </div>
-          <h2 class="experience-sub-title project-title">Project One</h2>
+          <h2 class="experience-sub-title project-title">Multi Quiz Trivia App</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
-              GitHub
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull/CognitiveApp'">
+              GitHub link
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull/CognitiveApp'">
               Live demo
             </button>
           </div>
-        </div>
+        </div> <!-- to here -->
         <div class="details-container color-container">
           <div class="article-container">
             <img src="./assets/project-2.png" alt="Project 2" class="project-img">
           </div>
-          <h2 class="experience-sub-title project-title">Project Two</h2>
+          <h2 class="experience-sub-title project-title">Word game</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
-              GitHub
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull/PythonWork'">
+              GitHub link
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull/PythonWork'">
               Live demo
             </button>
           </div>
@@ -267,12 +267,12 @@
           <div class="article-container">
             <img src="./assets/project-3.png" alt="Project 3" class="project-img">
           </div>
-          <h2 class="experience-sub-title project-title">Project Three</h2>
+          <h2 class="experience-sub-title project-title">Customer Invoice Management</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
-              GitHub
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull/Java/tree/master/test/src/GUIBUILDER'">
+              GitHub link
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/SamCull/Java/tree/master/test/src/GUIBUILDER'">
               Live demo
             </button>
           </div>
