Small updates to code + added more to document

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ themeBtn.onclick = () => {
           <div class="article-container">
             <img src="./assets/project-3.png" alt="Project 3" class="project-img">
           </div>
-          <h2 class="experience-sub-title project-title">ML Car Accident Prediction</h2>
+          <h2 class="experience-sub-title project-title">Machine Learning with Car Accident Data</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience', '_blank')">
               GitHub link
@@ -327,7 +327,7 @@ themeBtn.onclick = () => {
       <div class="contact-info-container">
         <div class="contact-info-container">
           <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
-          <p><a href="https://www.linkedin.com/in/sam-cullen-489a46221/"> LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/sam-cullen-489a46221/" target="_blank">LinkedIn</a></p>
         </div>
       </div>
     </div>
