--- a/index.html
+++ b/index.html
@@ -8,39 +8,6 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mediaQ.css" />
 </head>
-<!--
-<title>Toggle - Dark Theme</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
-</head>
-<style>
-/* Toggle Dark Theme */
-#theme-btn {
-  font-size: 1.5rem;
-  cursor: pointer;
-  color: #596AFF;
-}
-#theme-btn:hover {
-  color: #BB86FC;
-}
-.changeTheme {
-  background: #1D1E22;
-  color: #eee;
-}
-</style>
-<body>
-  <div id="theme-btn" class="far fa-moon"></div>
-<script>
-const themeBtn = document.getElementById("theme-btn");
-themeBtn.onclick = () => {
-  themeBtn.classList.toggle("fa-sun");
-  if (themeBtn.classList.contains("fa-sun")) {
-    document.body.classList.add("changeTheme");
-  } else {
-    document.body.classList.remove("changeTheme");
-  }
-}
-</script>
--->
 <body>
   <nav id="desktop-nav">
     <div class="logo">Sam Cullen</div>
@@ -80,7 +47,8 @@ themeBtn.onclick = () => {
       </div>
     </div>
   </nav>
-  <!-- Personal photo & Text -->
+
+  <!-- First page -->
   <section id="profile"><!-- Open here for Profile-->
     <div class="section__pic-container">
        <img src="./assets/me.jpg" alt="Sam Cullen picture" /> 
@@ -262,6 +230,7 @@ themeBtn.onclick = () => {
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
+
   <!-- Fourth page -->
   <section id="projects"> <!-- Open here for Projects -->
     <p class="section__text__p1">Browse my recent</p>
@@ -271,50 +240,113 @@ themeBtn.onclick = () => {
         <!-- Copy and paste this div to add more projects -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+            <img src="./assets/iris.jpg" alt="Project 1" class="project-img">
           </div>
-          <h2 class="experience-sub-title project-title">Multi Quiz Trivia App</h2>
+          <h2 class="experience-sub-title project-title">Iris Webapp</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/CognitiveApp', '_blank')">
-              GitHub link
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience/blob/main/Notebooks', '_blank')">
+              GitHub Repo link
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/CognitiveApp', '_blank')">
-              Live demo
-            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience/blob/main/Notebooks/Iris%20Webapp.ipynb', '_blank')">
+              Jupyter Notebook  
           </div>
         </div> <!-- to here -->
+
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-2.png" alt="Project 2" class="project-img">
-          </div>
-          <h2 class="experience-sub-title project-title">Word game</h2>
-          <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/PythonWork', '_blank')">
-              GitHub link
-            </button>
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/PythonWork', '_blank')">
-              Live demo
-            </button>
-          </div>
-        </div>
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img src="./assets/project-3.png" alt="Project 3" class="project-img">
+            <img src="./assets/machinglearning.jpg" alt="Project 3" class="project-img">
           </div>
           <h2 class="experience-sub-title project-title">Machine Learning with Car Accident Data</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience', '_blank')">
-              GitHub link
+              GitHub Repo link
             </button>
             <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience/blob/main/carAccidentData.ipynb', '_blank')">
             Jupyter Notebook
             </button>
           </div>
-        </div>
+        </div> <!-- to here -->
+
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/NN1.jpg" alt="Project 2" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Machine Learning with Artificial Neural Networks</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience', '_blank')">
+              GitHub Repo link
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience/blob/main/Notebooks/NeuralNetwork1.ipynb', '_blank')">
+            Jupyter Notebook
+            </button>
+          </div>
+        </div> <!-- to here -->
+
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/NN2.jpg" alt="Project 2" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Machine Learning with Artificial Neural Networks 2</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience', '_blank')">
+              GitHub Repo link
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience/blob/main/Notebooks/NeuralNetwork2.ipynb', '_blank')">
+            Jupyter Notebook
+            </button>
+          </div>
+        </div> <!-- to here -->
+
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/KNN.png" alt="Project 2" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Machine Learning with KNN</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience', '_blank')">
+              GitHub Repo link
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience/blob/main/Notebooks/kNearestNeighbour.ipynb', '_blank')">
+            Jupyter Notebook
+            </button>
+          </div>
+        </div> <!-- to here -->
+
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/SVM.png" alt="Project 2" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Machine Learning with Support Vector Machines</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience', '_blank')">
+              GitHub Repo link
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience/blob/main/Notebooks/Support-Vector-Machines.ipynb', '_blank')">
+            Jupyter Notebook
+            </button>
+          </div>
+        </div> <!-- to here -->
+
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/naivebayes.png" alt="Project 2" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Machine Learning with Naive Bayes</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience', '_blank')">
+              GitHub Repo link
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience/blob/main/Notebooks/Naive-Bayes.ipynb', '_blank')">
+            Jupyter Notebook
+            </button>
+          </div>
+        </div> <!-- to here -->
+
       </div>
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
   </section>
+
   <!-- Fifth page -->
   <section id="contact"> <!-- Open here for Contact-->
     <p class="section__text__p1"> Get in touch</p>
