--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
             </button>
             <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/SamCull/DataScience/blob/main/Notebooks/Iris%20Webapp.ipynb', '_blank')">
               Jupyter Notebook  
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="window.open('irisdemo.html')">
+                Live Demo
+              </button>
           </div>
         </div> <!-- to here -->
 
